<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserActivity">

    <TextView
        android:id="@+id/textViewCreateUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateUserInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/Name"
        app:layout_constraintBottom_toBottomOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toTopOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/EnterName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateUserInfo" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/EnterEmail"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toEndOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="392dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateUserInfo"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="44dp"
        android:layout_height="23dp"
        android:text="@string/Age"
        app:layout_constraintBottom_toBottomOf="@+id/editTextAge"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toTopOf="@+id/editTextAge" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/EnterAge"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toEndOf="@+id/textViewAge"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textViewCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Country"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCountrySelected"
        app:layout_constraintStart_toStartOf="@+id/textViewAge"
        app:layout_constraintTop_toTopOf="@+id/textViewCountrySelected" />

    <TextView
        android:id="@+id/textViewDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DOB"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDOBSelected"
        app:layout_constraintStart_toStartOf="@+id/textViewCountry"
        app:layout_constraintTop_toTopOf="@+id/textViewDOBSelected" />

    <TextView
        android:id="@+id/textViewCountrySelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/NA"
        app:layout_constraintStart_toEndOf="@+id/textViewCountry"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <TextView
        android:id="@+id/textViewDOBSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/NA"
        app:layout_constraintEnd_toEndOf="@+id/textViewCountrySelected"
        app:layout_constraintStart_toEndOf="@+id/textViewDOB"
        app:layout_constraintTop_toBottomOf="@+id/textViewCountrySelected" />

    <Button
        android:id="@+id/buttonSelectCountry"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Select"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCountrySelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextAge"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <Button
        android:id="@+id/buttonSelectDOB"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:text="@string/Select"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDOBSelected"
        app:layout_constraintEnd_toEndOf="@+id/buttonSelectCountry"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonSelectCountry"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectCountry" />

</androidx.constraintlayout.widget.ConstraintLayout>